# 3d-raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/: default.frag  default.vert  pass.frag  pass.vert  raytracer.comp  raytracer.frag  raytracer.vert  simple.frag  simple.vert
include/: bvh.h  camera.h  object.h  shader.h  tiny_obj_loader.h  window.h
src/: bvh.cpp  camera.cpp  main.cpp  shader.cpp  shader.h  tiny_obj_impl.cpp  window.cpp
